<resources>
    <string name="app_name">Advanced Software Engineering Team Project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="google_api">AIzaSyDNHI6faVqbHx_4TpGPbhalMj_22zx59j0</string>
    <string name="loading">loading...</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="register">REGISTER</string>
    <string name="unique_identifier">ID</string>
    <string name="price">Price (£)</string>
    <string name="property_type">Property Type</string>
    <string name="duration">Duration</string>
    <string name="pano">Primary Address</string>
    <string name="sano">Secondary Address</string>
    <string name="street">Street</string>
    <string name="locality">Locality</string>
    <string name="district">District</string>
    <string name="country">County</string>
    <string name="new_or_old">New or Old</string>
    <string name="town">Town/City</string>
    <string name="category_type">Category Type</string>
    <string name="record_status">Record Status</string>
    <string name="no_data_found">NO DATA FOUND</string>
    <string name="housing">House History</string>
    <string name="crime">Crime</string>
    <string name="weather">Weather</string>
    <string name="location">Location</string>
    <string name="crimetype">Crime Type</string>
    <string name="reportedby">Reported By</string>
    <string name="lsaoName">LSAO Name</string>
    <string name="lsaoCode">LSAO Code</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="search">Search</string>
    <string name="crime_history">crime history</string>
    <string name="logout">logout</string>
    <string name="housing_history">Transaction History</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="heatmap">HeatMap</string>
    <string name="accessKey">AKIAQU2WGXGCLFVTEE6J</string>
    <string name="secret_key">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</string>
</resources>

